# law_rag

./: .env.example  .gitignore  AGENTS.md  README.md  SUBMISSION.md  TASKS.md  assignment.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: eval.yml
configs/: agent.yaml  cache.yaml  chunking.yaml  data_sources.sample.json  demo_corpus.lock.json  eval.yaml  reranking.yaml  retrieval.yaml  security.yaml
data/eval/: gold_questions.jsonl
data/raw/: manifest.json
data/raw/cases/: ecli_nl_ghams_2014_3488.xml  ecli_nl_ghams_2021_4309.xml  ecli_nl_ghdha_2023_2457.xml  ecli_nl_hr_2008_bb3438.xml  ecli_nl_hr_2025_335.xml  ecli_nl_hr_2025_99.xml  ecli_nl_hr_2026_281.xml  ecli_nl_hr_2026_59.xml  ecli_nl_rbdha_2025_17324.xml  ecli_nl_rbzwb_2025_7267.xml
data/raw/e_learning/: box1_basics.json  (+1 more)
docs/: architecture.md  demo-script.md  index.md  interview-prep.md  production-delta.md
docs/decisions/: 001-schema-boundaries.md  002-xml-parsing.md  003-legal-chunking.md  004-rbac-retrieval.md  005-vector-db-and-hybrid-retrieval.md  006-evidence-gating-and-refusal.md  007-corrective-control-flow.md  008-deterministic-evaluation-baseline.md  009-deterministic-reranking-and-semantic-normalization.md  010-ttft-and-scale-strategy.md  011-promotion-gates-and-structured-traces.md  012-validity-aware-retrieval-and-stricter-gold-eval.md  013-redis-backed-semantic-cache-adapter.md  014-reranker-backend-boundary.md  README.md
scripts/: benchmark_ttft.py  build_chunks.py  build_dense_index.py  demo_cli.py  download_legal_demo_data.py  parse_raw_data.py  run_eval.py  run_interview_demo.py
src/tax_rag/: __init__.py
tests/: test_agent_baseline.py  test_agent_control.py  test_api.py  test_app_cache.py  test_build_chunks.py  test_chunking.py  test_demo_cli.py  test_dense_hybrid_retrieval.py  test_document_schema.py  test_eval_runner.py  test_latency_benchmark.py  test_lexical_retrieval.py  test_merge_documents.py  test_parser_cases.py  test_parser_laws.py  test_persistent_dense_index.py  test_phase0_baseline.py  test_phase3_contracts.py  test_rbac_filter.py  test_rerank.py  test_retrieval_service.py  test_semantic_cache.py  test_synthetic_sources.py
(+61 files in other folders)
